--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
-    "react-native-maps": "0.29.4"
+    "react-native-maps": "0.29.4",
+    "expo-sqlite": "~10.1.0",
+    "expo-file-system": "~13.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
