--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-web": "0.17.1",
     "react-native-maps": "0.29.4",
     "expo-sqlite": "~10.1.0",
-    "expo-file-system": "~13.1.0"
+    "expo-file-system": "~13.1.0",
+    "expo-location": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
