--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.3.9",
     "@expo/vector-icons": "^12.0.5",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.11",
@@ -17,6 +18,10 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "expo": "~44.0.0",
+    "expo-asset": "~8.4.6",
+    "expo-file-system": "~13.1.0",
+    "expo-location": "~14.0.1",
+    "expo-sqlite": "~10.1.0",
     "expo-status-bar": "~1.2.0",
     "firebase": "^8.10.0",
     "prop-types": "^15.8.1",
@@ -24,15 +29,12 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-maps": "0.29.4",
     "react-native-paper": "^4.11.1",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1",
-    "react-native-maps": "0.29.4",
-    "expo-sqlite": "~10.1.0",
-    "expo-file-system": "~13.1.0",
-    "expo-location": "~14.0.1"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
