--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@react-navigation/stack": "^5.12.8",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.6",
+    "expo-av": "~10.2.0",
     "expo-file-system": "~13.1.0",
+    "expo-linear-gradient": "^11.0.0",
     "expo-location": "~14.0.1",
     "expo-sqlite": "~10.1.0",
     "expo-status-bar": "~1.2.0",
@@ -34,8 +36,8 @@
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1",
-    "expo-av": "~10.2.0"
+    "react-native-table-component": "^1.2.1",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
