--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "@use-expo/font": "^2.0.0",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.6",
     "expo-av": "~10.2.0",
@@ -36,9 +37,9 @@
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-svg": "12.1.1",
     "react-native-table-component": "^1.2.1",
-    "react-native-web": "0.17.1",
-    "react-native-svg": "12.1.1"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
