firebaseへの書き込み、なんとなく動くまで

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,5 +21,8 @@
         "no-use-before-define": 0,
         "react/prop-types": ["error", { "ignore": ["navigation"] }],
         "no-underscore-dangle": "off"
+    },
+    "globals": {
+        "fetch": false
     }
 }
