--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-svg": "12.1.1",
     "react-native-table-component": "^1.2.2",
     "react-native-table-component-2": "^2.0.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-share": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
