--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-table-component": "^1.2.2",
     "react-native-table-component-2": "^2.0.0",
     "react-native-web": "0.17.1",
-    "react-share": "^4.4.0"
+    "react-share": "^4.4.0",
+    "expo-updates": "~0.11.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
