--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@expo/metro-config": "^0.3.9",
     "@expo/vector-icons": "^12.0.5",
-    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^5.8.10",
@@ -42,7 +41,8 @@
     "react-native-table-component-2": "^2.0.0",
     "react-native-web": "0.17.1",
     "react-share": "^4.4.0",
-    "expo-updates": "~0.11.6"
+    "expo-updates": "~0.11.6",
+    "@react-native-async-storage/async-storage": "~1.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
