--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/metro-config": "^0.3.9",
     "@expo/vector-icons": "^12.0.5",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^5.8.10",
@@ -25,12 +26,15 @@
     "expo-location": "~14.0.1",
     "expo-sqlite": "~10.1.0",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "firebase": "^8.10.0",
     "prop-types": "^15.8.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-keyboard-aware-view": "0.0.14",
     "react-native-maps": "0.29.4",
     "react-native-paper": "^4.11.1",
     "react-native-reanimated": "~2.3.1",
@@ -40,9 +44,7 @@
     "react-native-table-component": "^1.2.2",
     "react-native-table-component-2": "^2.0.0",
     "react-native-web": "0.17.1",
-    "react-share": "^4.4.0",
-    "expo-updates": "~0.11.6",
-    "@react-native-async-storage/async-storage": "~1.15.0"
+    "react-share": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
